# findcrypt

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: endian.rs  logger.rs  main.rs  patterns.rs
src/patterns/: crypto.rs  hash.rs  mod.rs  other.rs
util/: rustc
