[package]
name = "findcrypt"
version = "0.0.1"
authors = ["Andrew Dunham <andrew@du.nham.ca>"]

[dependencies]
aho-corasick = "0.3"
ansi_term = "*"
byteorder = "*"
clap = "*"
fern = "0.3"
handlebars = "*"
itertools = "0.3"
libc = "*"
log = "0.3"
rustc-serialize = "0.3"
time = "0.1"

[dependencies.mmap]
git = "https://github.com/retep998/rust-mmap"
rev = "4617dd0901d6899faebfbc427714b89fcb889880"
